<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"

    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Main title & subtitle-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/standartPadding"
                android:paddingTop="@dimen/standartPadding"
                android:paddingRight="@dimen/standartPadding"
                android:paddingBottom="@dimen/standartPadding">

                <TextView
                    android:id="@+id/tvMainTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/greeting"
                    android:textColor="@color/blue"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvMainSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/inter_bold"
                    android:text=""
                    android:textColor="@color/yellow"
                    android:textSize="18sp" />

            </LinearLayout>

            <!--My notes-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical"
                android:paddingVertical="@dimen/verticalSectionPadding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/standartPadding">

                    <TextView
                        android:id="@+id/tvNotesTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/my_notes"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_right_arrow" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/openNoteEditorBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/ic_add_note_big" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="20dp"
                    android:id="@+id/recyclerViewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!--My tasks-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/black"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/standartPadding"
                android:paddingVertical="@dimen/verticalSectionPadding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTasksTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/my_tasks"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_right_arrow" />
                </LinearLayout>

                <!--Task blocks-->
                <LinearLayout
                    android:id="@+id/tasksContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

                <!--Add a new task -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_faded_yellow_circle" />

                    <EditText
                        android:id="@+id/addTaskEdtTxt"
                        android:background="@null"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/inter_regular"
                        android:hint="@string/edt_txt_add_task_hint"
                        android:textColorHint="@color/fadedText"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:inputType="text" />

                    <ImageView
                        android:id="@+id/addTaskBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_add_task_btn" />
                </LinearLayout>

            </LinearLayout>

            <!--Notebook section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:background="@color/black"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/standartPadding"
                android:paddingTop="@dimen/verticalSectionPadding"
                android:paddingBottom="76dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNotebooksTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/notebook"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:src="@drawable/ic_right_arrow" />
                </LinearLayout>

                <!-- Textarea-->
                <AutoCompleteTextView
                    android:imeOptions="actionNext"
                    android:id="@+id/etNotebookText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/round_yellow_border"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="top|start"
                    android:hint="@string/notebook_edt_txt_hint"
                    android:minHeight="75dp"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/fadedEditText"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>